--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
-.App {
-  text-align: center;
+:root {
+  font-family: helvetica, sans-serif;
+  font-size:14px;
+
+  --blue:#214478;
+  --gray:#e6e6e6;
+  --dark-font:#555555;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar { display: none; }
+
+* {
+  box-sizing: border-box;
+  margin:0;
+  padding:0;
+  flex-grow: 0;
+  flex-shrink: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body{
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.screen {
+  position: relative;
+  width:100%;
+  height:100%;
+  overflow-y: scroll;
+}
+
+.content-row {
+  display:flex;
+  justify-content: space-between;
+  width:95%;
+  margin:0 auto;
+  /*border:1px solid teal;*/
+  
+}
+
+.content-col {
+  display:flex;
+  flex-direction: column;
+  width:95%;
+  margin:0 auto;
+  /*border:1px solid teal;*/
+}
+
+.header{
+  width: 100%;
+  height:15rem;
+  padding:2rem;
+  background-color: var(--blue);
+  margin-bottom: 2rem;
+}
+
+.welcome {
+  color:white;
+  font-size: 1.5rem;
+  width: 90%;
+}
+
+.menu {
+  width: 10%;
+  color:white;
+  font-size: 3rem;
+  text-align: right;
+
+
+}
+
+.header-top{
+  width: 100%;
+  min-height: 50%;
+}
+
+.header-bottom {
+  width: 100%;
+  height:50%;
+  display: flex;
+  justify-content: space-between; 
+}
+
+.square-icon {
+  transform: translateY(80%);
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  position: relative;
+  width:20%;
+  aspect-ratio: 1;
+  border-radius: 1rem;
+  background-color: var(--gray);
+  box-shadow: 0 0 5px #0005;
+  transition: .1s linear;
 }
 
-.App-link {
-  color: #61dafb;
+.square-icon:hover {
+  background: var(--blue);
+  color:#fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon-icon {
+  font-size: 2.5rem;
+}
+.icon-title{
+  text-transform: capitalize;
+  letter-spacing: 0.5px;
+}
+
+.main {
+  padding:2rem;
+}
+
+.content-box {
+  width:100%;
+  aspect-ratio: 1/0.3;
+  padding:1rem;
+  margin-bottom:2rem;
+  border-radius: 1rem;
+  background: var(--gray);
+  box-shadow: 0 0 5px #0005;
+}
+
+.footer {
+  width:100%;
+  height: 10rem;
+
+
+}
+
+/* Global Styles */
+
+.hidden {
+  display: none;
+}
+
+h2,h3,h4,h5,h6 {
+  font-weight: 400;
+  color: black;
+}
+
+.row {
+  display: flex;
 }
