--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,8 @@
     font-size:14px;
   
     --blue:#214478;
+    --blue2:#4d71a7;
+    --gradient: linear-gradient(90deg, var(--blue), var(--blue2));
     --gray:#e6e6e6;
     --gray2:#c8c8c8;
     --light-shadow: inset 5px 5px 5px #fff;
@@ -73,7 +75,7 @@
     width: 100%;
     height:15rem;
     padding:2rem;
-    background-color: var(--blue);
+    background: var(--gradient);
     margin-bottom: 2rem;
   }
   
@@ -120,6 +122,7 @@
   .square-icon:hover {
     background: var(--blue);
     color:#fff;
+    cursor: pointer;
   }
   
   .icon-icon {
@@ -151,11 +154,18 @@
         right:1rem;
         width:2rem;
         height:2rem;
+        font-family:serif;
         text-align: center;
         font-size: 1.5rem;
-        line-height: 1.6rem;
+        line-height: 2rem;
         border-radius: 50%;
         background-color: var(--gray2);
+
+        &:hover {
+          background: var(--gradient);
+          color:white;
+          cursor:pointer;
+        }
     }
 
         h3 {
@@ -163,6 +173,20 @@
             font-size:1.5rem;
             line-height: 3rem;
             color:#555;
+        }
+
+        .button {
+          float:right;
+          padding:.5em 1em;
+          border:none;
+          border-radius: 5px;
+          background-color: white;
+
+          &:hover {
+            background: var(--gradient);
+            color:white;
+            cursor: pointer;
+          }
         }
   }
   
